add basic information  block

--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Project For Code Immersives</title>
+        <title>Health Record</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="./style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        
-        <script src="./main.js"></script>
+        <div class="app">
+            <div class="header">
+                <h1>Health Record</h1>
+            </div>
+            <div class="basic-info"></div>
+            <div class="medical-history"></div>
+            <div class="medication-record"></div>
+            <div class="doctor visits"></div>
+            <script src="./main.js"></script>
+        </div>
     </body>
 </html>
